--- a/src/morunner/index.html
+++ b/src/morunner/index.html
@@ -1,1 +1,17 @@
-hello world
+<html>
+   <head>
+      <title>hello world</title>
+   </head>
+   <body>
+      <script type="text/javascript">
+var ws = new WebSocket("wss://navi.dnoland.com:18943/ws");
+ws.onopen = function() {
+   ws.send("Hello, world");
+};
+ws.onmessage = function (evt) {
+   console.log(evt.data);
+};
+      </script>
+      dan is cool
+   </body>
+</html>
